tests/functional/lang/eval-fail-list.err.exp
error: expected a list but found an integer: 8
       at /pwd/eval-fail-list.nix:1:1:
            1| 8++1
             | ^
            2|
